--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -2,6 +2,27 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
+
+    <!--Theme settings region start-->
+    <sys:Boolean x:Key="DetailsViewIsVideoPlayedByDefault">False</sys:Boolean>
+    <sys:Boolean x:Key="DetailsViewIsVideoTrailerDefault">True</sys:Boolean>
+    <sys:Boolean x:Key="DetailsViewIsLogoCoverFaded">False</sys:Boolean>
+    <sys:Boolean x:Key="DetailsViewLogoAreMediaControlsDisplayed">False</sys:Boolean>
+    <sys:Double x:Key="DetailsViewLogoMaxHeight">200</sys:Double>
+    <sys:Double x:Key="DetailsViewLogoMaxWidth">600</sys:Double>
+    <sys:Boolean x:Key="DetailsViewIsLogoVisible">True</sys:Boolean>
+    <sys:Boolean x:Key="DetailsViewIsLogoOnLeft">False</sys:Boolean>
+    <Visibility x:Key="DetailsViewDetailsIconsVisibility">Collapsed</Visibility>
+    <sys:Double x:Key="GridViewLogoHeight">100</sys:Double>
+    <sys:Boolean x:Key="GridViewIsLogoVisible">True</sys:Boolean>
+    <Visibility x:Key="GridViewDetailsIconsVisibility">Collapsed</Visibility>
+    <!--region end-->
+
+    <!--Extra Metadata Path values start-->
+    <sys:Boolean x:Key="UseAbsoluteExtraMetadataPath">false</sys:Boolean>
+    <sys:String x:Key="ExtraMetadataPath">..\..\..\..</sys:String>
+    <!--region end-->
+    
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
     <sys:Double x:Key="FontSize">14</sys:Double>
     <sys:Double x:Key="FontSizeLarge">15</sys:Double>
