--- a/source/DefaultControls/Button.xaml
+++ b/source/DefaultControls/Button.xaml
@@ -106,15 +106,15 @@
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                           Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" >
                                 <ContentPresenter.Content>
-                                    <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform" Opacity="0.5" Name="Path">
-                                        <Canvas Name="Layer_2" Width="256" Height="256" Canvas.Left="0" Canvas.Top="0">
+                                    <Viewbox Stretch="Uniform" Opacity="0.5" Name="Path">
+                                        <Canvas Width="256" Height="256" Canvas.Left="0" Canvas.Top="0">
                                             <Canvas.RenderTransform>
                                                 <TranslateTransform X="0" Y="0"/>
                                             </Canvas.RenderTransform>
                                             <Canvas.Resources/>
-                                            <Polyline xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Points="86.883,110.957 152.894,110.957 152.894,181.406 177.117,181.406 177.117,202.485 86.883,202.485 86.883,181.775 109.441,181.775 109.441,130.372 86.883,130.372 " FillRule="NonZero" Fill="{TemplateBinding Foreground}"/>
-                                            <Ellipse xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="103" Canvas.Top="42.1" Width="51" Height="51" Fill="{TemplateBinding Foreground}"/>
-                                            <Ellipse xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="11.2" Canvas.Top="11.2" Width="233.7" Height="233.7" StrokeThickness="14" Stroke="{TemplateBinding Foreground}" StrokeMiterLimit="10"/>
+                                            <Polyline Points="86.883,110.957 152.894,110.957 152.894,181.406 177.117,181.406 177.117,202.485 86.883,202.485 86.883,181.775 109.441,181.775 109.441,130.372 86.883,130.372 " FillRule="NonZero" Fill="{TemplateBinding Foreground}"/>
+                                            <Ellipse Canvas.Left="103" Canvas.Top="42.1" Width="51" Height="51" Fill="{TemplateBinding Foreground}"/>
+                                            <Ellipse Canvas.Left="11.2" Canvas.Top="11.2" Width="233.7" Height="233.7" StrokeThickness="14" Stroke="{TemplateBinding Foreground}" StrokeMiterLimit="10"/>
                                         </Canvas>
                                     </Viewbox>
                                 </ContentPresenter.Content>
