--- a/source/DefaultControls/TreeView.xaml
+++ b/source/DefaultControls/TreeView.xaml
@@ -34,6 +34,7 @@
         <Setter Property="Background" Value="{DynamicResource ControlBackgroundBrush}" />
         <Setter Property="Padding" Value="0,2,4,2" />
         <Setter Property="Margin" Value="0,1,0,0" />
+        <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TreeViewItem}">
