--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -70,31 +70,69 @@
 
                                 <Grid DockPanel.Dock="Top" Margin="0,10,0,10" Background="Transparent">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" MaxWidth="150" />
-                                        <ColumnDefinition Width="*" MaxWidth="150" />
-                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="189.5" />
+                                        <ColumnDefinition Width="24.5" />
+                                        <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
                                     <Button Name="PART_ButtonPlayAction" Grid.Column="0"
-                                            Height="40" Style="{DynamicResource PlayButton}" />
+                                            Height="45" Style="{DynamicResource PlayButton}" />
                                     <Button Name="PART_ButtonContextAction"
-                                            Height="40" Grid.Column="0" />
+                                            Height="45" Style="{DynamicResource ContextButton}" Grid.Column="0" />
                                     <Button Name="PART_ButtonMoreActions"
-                                            Content="{DynamicResource LOCMoreAction}"
-                                            Height="40" Grid.Column="1" Margin="10,0,0,0" />
-                                    <Button x:Name="PART_ButtonEditGame" Grid.Column="2"
-                                            Margin="10,0,5,0" Height="40" Focusable="False"
-                                            Content="&#xeded;" FontFamily="{DynamicResource FontIcoFont}">
+                                            Height="45" Margin="3.5,0,0,0" Grid.Column="1">
                                         <Button.Style>
-                                            <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
-                                                <Setter Property="Visibility" Value="Hidden" />
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource AncestorType=Grid}}"  Value="True">
-                                                        <Setter Property="Visibility" Value="Visible" />
-                                                    </DataTrigger>
-                                                </Style.Triggers>
+                                            <Style TargetType="Button">
+                                                <Setter Property="Background" Value="{DynamicResource PlayButtonBackgroundBrush}" />
+                                                <Setter Property="Cursor" Value="Hand"/>
+                                                <Setter Property="Template">
+                                                    <Setter.Value>
+                                                        <ControlTemplate TargetType="{x:Type Button}">
+                                                            <Grid x:Name="Grid">
+                                                                <Border x:Name="DefaultBorder" CornerRadius="0,2,2,0" Background="{TemplateBinding Background}"/>
+                                                                <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0">
+                                                                    <TextBlock x:Name="Icon" Text="&#xEA67;" FontFamily="{DynamicResource FontIcoFont}" FontSize="18"
+                                                                                Foreground="{DynamicResource TextBrush}" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                                                                    <ContentPresenter RecognizesAccessKey="True" VerticalAlignment="Center"/>
+                                                                </DockPanel>
+                                                            </Grid>
+                                                            <ControlTemplate.Triggers>
+                                                                <DataTrigger Binding="{Binding Game.IsInstalled}" Value="False">
+                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
+                                                                </DataTrigger>
+                                                                <DataTrigger Binding="{Binding Game.IsRunning}" Value="True">
+                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
+                                                                </DataTrigger>
+                                                                <MultiDataTrigger>
+                                                                    <MultiDataTrigger.Conditions>
+                                                                        <Condition Binding="{Binding Game.IsInstalled}" Value="True"/>
+                                                                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
+                                                                    </MultiDataTrigger.Conditions>
+                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonInstalledIsMouseOverBackgroundBrush}"/>
+                                                                </MultiDataTrigger>
+                                                                <MultiDataTrigger>
+                                                                    <MultiDataTrigger.Conditions>
+                                                                        <Condition Binding="{Binding Game.IsInstalled}" Value="False"/>
+                                                                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
+                                                                    </MultiDataTrigger.Conditions>
+                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledIsMouseOverBackgroundBrush}"/>
+                                                                </MultiDataTrigger>
+                                                                <MultiDataTrigger>
+                                                                    <MultiDataTrigger.Conditions>
+                                                                        <Condition Binding="{Binding Game.IsRunning}" Value="True"/>
+                                                                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
+                                                                    </MultiDataTrigger.Conditions>
+                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledIsMouseOverBackgroundBrush}"/>
+                                                                </MultiDataTrigger>
+                                                            </ControlTemplate.Triggers>
+                                                        </ControlTemplate>
+                                                    </Setter.Value>
+                                                </Setter>
                                             </Style>
                                         </Button.Style>
                                     </Button>
+                                    <Button x:Name="PART_ButtonEditGame" Grid.Column="2" HorizontalAlignment="Right" Padding="5"
+                                            Margin="10,0,5,0" Height="45" Focusable="False" VerticalAlignment="Top" Opacity="0.50"
+                                            Style="{DynamicResource GameEditButton}" FontFamily="{DynamicResource FontIcoFont}" />
                                 </Grid>
 
                                 <ScrollViewer DockPanel.Dock="Top" HorizontalAlignment="Stretch"
